fix movie detail cover not showing right

--- a/src/app/styl/views/movie_detail.styl
+++ b/src/app/styl/views/movie_detail.styl
@@ -47,7 +47,7 @@
             width 53vh
             bottom -15.5vh
             left 90px
-            z-index 2
+            z-index 3
             position absolute
             border-radius 2px
             box-shadow 0 1px 5px rgba(0, 0, 0, 0.39)
